--- a/server/views/content/books/list.ejs
+++ b/server/views/content/books/list.ejs
@@ -1,3 +1,9 @@
+<!--File: /views/content/books/list.ejs
+Author Name: Kiruthika Varathanthan
+Student ID: 301200412
+Web App Name: COMP229-Midterm-301200412
+Date: 2022-10-28-->
+
 <main class="container">
     <div class="row">
         <div class="offset-md-1 col-md-11">
